Re Structured Code
Added comments and used custom fonts.

--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=3, user-scalable=yes">
     <link rel="icon" type="image/png" href="./assets/images/ba0ae581-10d7-461f-bcc3-e13921f85430.png">
     <title>Top 10 Meal Delivery Services For 2020</title>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap"
-        rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Miriam+Libre:wght@400;700&display=swap" rel="stylesheet" />
+    <!-- Star Icons Used for product ratings -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <!-- CSS FIles -->
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="./assets/css/default.css" rel="stylesheet" />
     <link href="./assets/css/responsive.css" rel="stylesheet" />
+    <!-- All of my styles are in this file - previously used styles were removed as they were not useful for me. -->
     <link href="./assets/css/style.css" rel="stylesheet" />
 </head>
-
 <body>
     <div class="bar"></div>
+    <!-- Navbar -->
     <div class="container px-0">
         <nav class="navbar navbar-expand-md navbar-light bg-white px-2 px-lg-0">
                 <a class="navbar-brand" href="#">
@@ -52,6 +51,7 @@
             </div>
         </nav>
     </div>
+    <!-- HomePage Banner -->
     <div class="container">
         <div class="row home-image">
             <div class="col-lg-7 p-5 pl-2r">
@@ -79,8 +79,10 @@
             </div>
         </div>
     </div>
+    <!-- Products -->
     <div class="container">
         <div class="row products">
+    <!-- Products Section-->
             <div class="col-lg-9 pl-2r top-choices">
                 <div class="container card rounded-0">
                     <div class="row">
@@ -98,12 +100,12 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </p>
-                                <p class="small">19,919 reviews on 3 websites</p>
+                                <p class="rating-line">19,919 reviews on 3 websites</p>
                             </div>
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5 pr-0">
                             <div class="card-body px-0">
-                                <h5 class="card-title">Home Chef</h5>
+                                <h5 class="product-title">Home Chef</h5>
                                 <ul class="product-details-list">
                                     <li>Get $80 off your first 4 orders.</li>
                                     <li>38 weekly menu options + oven ready</li>
@@ -140,12 +142,12 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </p>
-                                <p class="small">19,919 reviews on 3 websites</p>
+                                <p class="rating-line">19,919 reviews on 3 websites</p>
                             </div>
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5 pr-0">
                             <div class="card-body px-0">
-                                <h5 class="card-title">HelloFresh</h5>
+                                <h5 class="product-title">HelloFresh</h5>
                                 <ul class="product-details-list">
                                     <li>Get $80 off your first 4 orders.</li>
                                     <li>38 weekly menu options + oven ready</li>
@@ -178,12 +180,12 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </p>
-                                <p class="small">19,919 reviews on 3 websites</p>
+                                <p class="rating-line">19,919 reviews on 3 websites</p>
                             </div>
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5 pr-0">
                             <div class="card-body px-0">
-                                <h5 class="card-title">Freshly</h5>
+                                <h5 class="product-title">Freshly</h5>
                                 <ul class="product-details-list">
                                     <li>Get $80 off your first 4 orders.</li>
                                     <li>38 weekly menu options + oven ready</li>
@@ -216,12 +218,12 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </p>
-                                <p class="small">19,919 reviews on 3 websites</p>
+                                <p class="rating-line">19,919 reviews on 3 websites</p>
                             </div>
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5 pr-0">
                             <div class="card-body px-0">
-                                <h5 class="card-title">Blue Apron</h5>
+                                <h5 class="product-title">Blue Apron</h5>
                                 <ul class="product-details-list">
                                     <li>Get $80 off your first 4 orders.</li>
                                     <li>38 weekly menu options + oven ready</li>
@@ -254,12 +256,12 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </p>
-                                <p class="small">19,919 reviews on 3 websites</p>
+                                <p class="rating-line">19,919 reviews on 3 websites</p>
                             </div>
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5 pr-0">
                             <div class="card-body px-0">
-                                <h5 class="card-title">Sun Basket</h5>
+                                <h5 class="product-title">Sun Basket</h5>
                                 <ul class="product-details-list">
                                     <li>Get $80 off your first 4 orders.</li>
                                     <li>38 weekly menu options + oven ready</li>
@@ -292,12 +294,12 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </p>
-                                <p class="small">19,919 reviews on 3 websites</p>
+                                <p class="rating-line">19,919 reviews on 3 websites</p>
                             </div>
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5 pr-0">
                             <div class="card-body px-0">
-                                <h5 class="card-title">Green Chef</h5>
+                                <h5 class="product-title">Green Chef</h5>
                                 <ul class="product-details-list">
                                     <li>Get $80 off your first 4 orders.</li>
                                     <li>38 weekly menu options + oven ready</li>
@@ -330,12 +332,12 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </p>
-                                <p class="small">19,919 reviews on 3 websites</p>
+                                <p class="rating-line">19,919 reviews on 3 websites</p>
                             </div>
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5 pr-0">
                             <div class="card-body px-0">
-                                <h5 class="card-title">Purple Carrot</h5>
+                                <h5 class="product-title">Purple Carrot</h5>
                                 <ul class="product-details-list">
                                     <li>Get $80 off your first 4 orders.</li>
                                     <li>38 weekly menu options + oven ready</li>
@@ -368,12 +370,12 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </p>
-                                <p class="small">19,919 reviews on 3 websites</p>
+                                <p class="rating-line">19,919 reviews on 3 websites</p>
                             </div>
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5 pr-0">
                             <div class="card-body px-0">
-                                <h5 class="card-title">Blue Apron</h5>
+                                <h5 class="product-title">Blue Apron</h5>
                                 <ul class="product-details-list">
                                     <li>Get $80 off your first 4 orders.</li>
                                     <li>38 weekly menu options + oven ready</li>
@@ -394,11 +396,12 @@
                     </div>
                 </div>
             </div>
+    <!-- Right Sidebar-->
             <div class="col-lg-3 pr-2r sidebar-right">
             <div class="container card rounded-0 mb-3">
                 <div class="row">
                     <div class="col-12 mt-3">
-                        <h4 class="font-weight-bold">Why Compare Plans?</h4>
+                        <h4 class="sidebar-section-title">Why Compare Plans?</h4>
                     </div>
                     <div class="col-md-12">
                         <div class="card-body px-0 pb-0">
@@ -434,7 +437,7 @@
             <div class="container card rounded-0 mb-3">
                 <div class="row">
                     <div class="col-12 my-3">
-                        <h4 class="font-weight-bold">264,090+</h4>
+                        <h4 class="sidebar-section-title">264,090+</h4>
                     </div>
                     <div class="col-md-8 pr-0">
                         <p style="font-size: 13px;">
@@ -449,13 +452,13 @@
             <div class="container card rounded-0 mb-3">
                 <div class="row">
                     <div class="col-12 my-3">
-                        <h4 class="font-weight-bold">Editorial Showcase</h4>
+                        <h4 class="sidebar-section-title">Editorial Showcase</h4>
                     </div>
                     <div class="col-md-4">
                         <img class="" src="./assets/images/ana.png">
                     </div>
                     <div class="col-md-8 pl-0">
-                        <span class="editorial-name text-lightblue">MEET <br> DR. ANA COLTO</span>
+                        <span class="ana">MEET <br> DR. ANA COLTO</span>
                     </div>
                     <div class="col-md-12 pb-3">
                         <p class="my-3" style="font-size: 14px;">
@@ -470,7 +473,7 @@
             <div class="container card rounded-0 mb-3">
                 <div class="row">
                     <div class="col-12 my-3">
-                        <h4 class="font-weight-bold">Editorial Reviews</h4>
+                        <h4 class="sidebar-section-title">Editorial Reviews</h4>
                     </div>
                     <div class="col-md-6">
                         <img class="" src="./assets/images/home-chef.png">
@@ -502,7 +505,7 @@
             <div class="container card rounded-0 mb-3">
                 <div class="row">
                     <div class="col-12 my-3">
-                        <h4 class="font-weight-bold">Recommended Reads</h4>
+                        <h4 class="sidebar-section-title">Recommended Reads</h4>
                     </div>
                     <div class="col-md-6">
                         <img class="" src="./assets/images/r1.png">
@@ -534,7 +537,7 @@
             <div class="container card rounded-0 mb-3">
                 <div class="row">
                     <div class="col-12 my-3">
-                        <h4 class="font-weight-bold">How we Rank?</h4>
+                        <h4 class="sidebar-section-title">How we Rank?</h4>
                     </div>
                     <div class="col-md-8 mb-4">
                         <p class="f-14">
@@ -550,6 +553,7 @@
         </div>
     </div>
     </div>
+    <!-- Footer Section -->
     <div id="Footer-section" class="mt-5">
         <div class="container">
             <div class="row">
@@ -570,18 +574,18 @@
             </div>
         </div>
     </div>
+    <!-- Footer-Copyrights Section -->
     <div class="bg-white">
         <div class="container">
             <div class="row">
                 <div class="col-12 p-3">
-                    <p class="text-center mb-1 f-14">Copyright &copy 2020 comparemealdelivery.com</p>
+                    <p class="text-center copyrights mb-1 f-14">Copyright &copy 2020 comparemealdelivery.com</p>
                 </div>
             </div>
         </div>
     </div>
-
+    <!-- Not My Code - Fron Previous Website -->
     <div>
-
         <script src="./assets/js/jquery.min.js"></script>
         <script src="./assets/js/Popper.js"></script>
         <script src="./assets/js/jquery.sticky.js"></script>
@@ -660,8 +664,6 @@
             gtag('config', 'UA-178134462-6', { experiments: [{ id: 'jbHk6QlMSZqKnD4QIrdWHQ', variant: '1' }] });
         </script>
     </div>
-
-    <!---->
     <div>
         <div class="grecaptcha-badge" data-style="bottomright"
             style="width: 256px; height: 60px; display: block; transition: right 0.3s ease 0s; position: fixed; bottom: 14px; right: -186px; box-shadow: gray 0px 0px 5px; border-radius: 2px; overflow: hidden;">
@@ -676,5 +678,4 @@
         </div><iframe style="display: none;"></iframe>
     </div>
 </body>
-
 </html>
