Added New CSS File

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="./assets/css/default.css" rel="stylesheet" />
     <link href="./assets/css/responsive.css" rel="stylesheet" />
-    <!-- All of my styles are in this file - previously used styles were removed as they were not useful for me. -->
+    <!-- Old stylesheet -->
     <link href="./assets/css/style.css" rel="stylesheet" />
+    <!-- All of New styles are in this file -->
+    <link href="./assets/css/stylev2.css" rel="stylesheet" />
 </head>
 <body>
     <div class="bar"></div>
@@ -24,7 +26,10 @@
                     <img src="./assets/images/logo.png" alt="logo.png">
                 </a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-                    aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <!-- <span class="navbar-toggler-icon"></span> -->
+                    <img src="./assets/images/nav-toggler.png" alt="">
+                </button>
             <div class="collapse navbar-collapse ml-auto px-0" id="collapsibleNavId">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
